# AutoCellGen

./: .gitmodules  LICENSE  README.md
DATA/dataset/IOnet/: A2O1A1Ixp33_ASAP7_6t_R_IOnet.txt  A2O1A1Ixp5_ASAP7_6t_R_IOnet.txt  A2O1A1O1Ixp33_ASAP7_6t_R_IOnet.txt  AND2x2_ASAP7_6t_R_IOnet.txt  AND2x4_ASAP7_6t_R_IOnet.txt  AND2x6_ASAP7_6t_R_IOnet.txt  AND3x1_ASAP7_6t_R_IOnet.txt  AND3x2_ASAP7_6t_R_IOnet.txt  AND3x4_ASAP7_6t_R_IOnet.txt  AND4x1_ASAP7_6t_R_IOnet.txt  AND4x2_ASAP7_6t_R_IOnet.txt  AND5x1_ASAP7_6t_R_IOnet.txt  AND5x2_ASAP7_6t_R_IOnet.txt  AO211x1_ASAP7_6t_R_IOnet.txt  AO211x2_ASAP7_6t_R_IOnet.txt  AO21x1_ASAP7_6t_R_IOnet.txt  AO21x2_ASAP7_6t_R_IOnet.txt  AO221x1_ASAP7_6t_R_IOnet.txt  AO221x2_ASAP7_6t_R_IOnet.txt  AO222x1_ASAP7_6t_R_IOnet.txt  AO222x2_ASAP7_6t_R_IOnet.txt  AO22x1_ASAP7_6t_R_IOnet.txt  AO22x2_ASAP7_6t_R_IOnet.txt  AO311x1_ASAP7_6t_R_IOnet.txt  AO311x2_ASAP7_6t_R_IOnet.txt  AO31x1_ASAP7_6t_R_IOnet.txt  AO31x2_ASAP7_6t_R_IOnet.txt  AO321x1_ASAP7_6t_R_IOnet.txt  AO321x2_ASAP7_6t_R_IOnet.txt  AO322x1_ASAP7_6t_R_IOnet.txt  AO322x2_ASAP7_6t_R_IOnet.txt  AO32x1_ASAP7_6t_R_IOnet.txt  AO32x2_ASAP7_6t_R_IOnet.txt  AO331x1_ASAP7_6t_R_IOnet.txt  AO331x2_ASAP7_6t_R_IOnet.txt
DATA/dataset/placement/: A2O1A1Ixp33_ASAP7_6t_R_w6.txt  A2O1A1Ixp5_ASAP7_6t_R_w8.txt  A2O1A1O1Ixp33_ASAP7_6t_R_w8.txt  AND2x2_ASAP7_6t_R_w6.txt  AND2x4_ASAP7_6t_R_w11.txt  AND2x6_ASAP7_6t_R_w13.txt  AND3x1_ASAP7_6t_R_w6.txt  AND3x2_ASAP7_6t_R_w7.txt  AND3x4_ASAP7_6t_R_w13.txt  AND4x1_ASAP7_6t_R_w7.txt  AND4x2_ASAP7_6t_R_w8.txt  AND5x1_ASAP7_6t_R_w8.txt  AND5x2_ASAP7_6t_R_w9.txt  AO211x1_ASAP7_6t_R_w7.txt  AO211x2_ASAP7_6t_R_w8.txt  AO21x1_ASAP7_6t_R_w6.txt  AO21x2_ASAP7_6t_R_w7.txt  AO221x1_ASAP7_6t_R_w9.txt  AO221x2_ASAP7_6t_R_w10.txt  AO222x1_ASAP7_6t_R_w10.txt  AO222x2_ASAP7_6t_R_w11.txt  AO22x1_ASAP7_6t_R_w8.txt  AO22x2_ASAP7_6t_R_w9.txt  AO311x1_ASAP7_6t_R_w8.txt  AO311x2_ASAP7_6t_R_w9.txt  AO31x1_ASAP7_6t_R_w7.txt  AO31x2_ASAP7_6t_R_w8.txt  AO321x1_ASAP7_6t_R_w9.txt  AO321x2_ASAP7_6t_R_w10.txt  AO322x1_ASAP7_6t_R_w11.txt  AO322x2_ASAP7_6t_R_w12.txt  AO32x1_ASAP7_6t_R_w8.txt  AO32x2_ASAP7_6t_R_w9.txt  AO331x1_ASAP7_6t_R_w10.txt  AO331x2_ASAP7_6t_R_w11.txt  summary.txt
DATA/input/: asap7sc6t.sp  asap7sc7p5t.sp  placement_file.style
MAKE/PLACE/: 1.run_csyn_fp  _update_and_clear
MAKE/PLACE/csyn_fp/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
MAKE/PLACE/csyn_fp/header/: .ArgumentParser.h.swp  ArgumentParser.h  GroupPlacer.h  Pairing.h  PlaceGrid.h  PlaceGroupUnit.h  PlaceUnit.h  Placer.h  RoutingResult.h  beol_data.h  cdlParser.h  global.h  setting.h
MAKE/PLACE/csyn_fp/src/: GroupPlacer.cpp  Pairing.cpp  PlaceGrid.cpp  PlaceGroupUnit.cpp  PlaceUnit.cpp  Placer.cpp  beol_data.cpp  cdlParser.cpp  main.cpp  setting.cpp
MAKE/PLACE_ROUTE/: _clear  _update
MAKE/PLACE_ROUTE/csyn_fp/: CMakeLists.txt
MAKE/PLACE_ROUTE/csyn_fp/header/: ArgumentParser.h  RouteGrid.h  Router.h  setting.h
MAKE/PLACE_ROUTE/csyn_fp/src/: GroupPlacer.cpp  Placer.cpp  Router.cpp  RoutingResult.cpp  main.cpp  setting.cpp
